--- a/P1.html
+++ b/P1.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="canvas"></div>
+    <script src="js/helpers/Helper.js"></script>
+    <script src="js/Enemies/Crab.js"></script>
     <script src="js/three.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/OBJLoader.js"></script>
