--- a/P1.html
+++ b/P1.html
@@ -8,16 +8,18 @@
     </style>
   </head>
   <body>
-    <div id="canvas"></div>
-    <script src="js/helpers/Helper.js"></script>
-    <script src="js/Enemies/Crab.js"></script>
-    <script src="js/three.js"></script>
-    <script src="js/three.min.js"></script>
-    <script src="js/OBJLoader.js"></script>
-    <script src="js/SourceLoader.js"></script>
-    <script src="js/OrbitControls.js"></script>
-    <script src="js/KeyboardState.js"></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
-<script src="P1.js"></script>
+    <div id="container">
+      <canvas id="canvas" style="width:100%;height:95%;border:1px gray solid;"></canvas>
+      <script src="js/helpers/Helper.js"></script>
+      <script src="js/Enemies/Crab.js"></script>
+      <script src="js/three.js"></script>
+      <script src="js/three.min.js"></script>
+      <script src="js/OBJLoader.js"></script>
+      <script src="js/SourceLoader.js"></script>
+      <script src="js/OrbitControls.js"></script>
+      <script src="js/KeyboardState.js"></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
+      <script src="P1.js"></script>
+    </div>
 </body>
 </html>
 
