Bullets work, added more enemies

--- a/P1.html
+++ b/P1.html
@@ -12,6 +12,7 @@
       <canvas id="canvas" style="width:100%;height:95%;border:1px gray solid;"></canvas>
       <script src="js/helpers/Helper.js"></script>
       <script src="js/Enemies/Crab.js"></script>
+      <script src="js/Enemies/Bullet.js"></script>
       <script src="js/three.js"></script>
       <script src="js/three.min.js"></script>
       <script src="js/OBJLoader.js"></script>
